# color-word-analyzer

./: .gitignore  README.md  annotate-color.cabal  color-word-analyzer.cabal  default.nix  pg-analysis.py
data/: xkcd.tsv
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
src/: AnnotateColors.hs  CLI.hs  CategorizeColor.hs  ColorMaps.hs  FindColors.hs  Main.hs  PlotColors.hs  Types.hs
src/Data/: Jaffer.hs  Master.hs  Pantone.hs  Ridgway.hs  Xkcd.hs
src/data/: Ridgway.hs  Xkcd.hs
