cabal-version:       >=1.10

name:                color-word-analyzer
version:             0.1.0.0
synopsis:            Finds color words in text, and produces charts.
-- description:
-- bug-reports:
-- license:             GNU General Public License v3.0 or later
 
license-file:        LICENSE.md
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           (c) 2020 Jonathan Reeve
category:            Text
stability:           experimental
homepage:            https://github.com/JonathanReeve/color-word-analyzer 
build-type:          Simple
extra-source-files:  CHANGELOG.md
data-dir:            data/

executable color-word-analyzer-cli
  main-is:           CLI.hs
  other-modules:     AnnotateColors
                   , CategorizeColor
                   , ColorMaps
                   , FindColors
                   , PlotColors
                   , Types
                   , Main
  build-depends:       base
                     , lucid
                     , clay
                     , text
                     , bytestring
                     , http-types
                     , cli
                     , replace-attoparsec
                     , attoparsec
                     , charsetdetect
                     , containers
                     , aeson
                     , plotlyhs
                     , microlens
                     , filepath
                     , colour
                     , Color
                     , Frames
                     , vector
                     , statistics
                     , scotty
                     , wai-extra
                     , wai-middleware-static
  hs-source-dirs:      src/
  default-language:    Haskell2010
