cabal-version:       >=1.10

name:                color-word-analyzer
version:             0.1.0.0
synopsis:            Finds color words in text, and produces charts.
description:         A web app and CLI for finding color words in a text, and analyzing theem.
-- bug-reports:
license:             GPL-3
 
license-file:        LICENSE.md
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           (c) 2020 Jonathan Reeve
category:            Text
stability:           experimental
homepage:            https://github.com/JonathanReeve/color-word-analyzer 
build-type:          Simple
-- extra-source-files:  CHANGELOG.md
-- data-dir:            data/

executable color-word-analyzer-cli
  main-is:           CLI.hs
  ghc-options:       -threaded -main-is CLI
  other-modules:     AnnotateColors
                   , CategorizeColor
                   , ColorMaps
                   , FindColors
                   , PlotColors
                   , Types
                   , Main
                   , Data.Ridgway
                   , Data.Xkcd
  build-depends:       base >= 4.10 && < 4.13
                     , Color
                     , Frames
                     , aeson
                     , attoparsec
                     , bytestring
                     , charsetdetect
                     , clay
                     , cli
                     , colour
                     , containers
                     , filepath
                     , http-types
                     , lucid
                     , microlens
                     , plotlyhs
                     , replace-attoparsec
                     , scotty
                     , statistics
                     , text
                     , unordered-containers
                     , vector
                     , wai-extra
                     , wai-middleware-static
  hs-source-dirs:      src/
  default-language:    Haskell2010
