cabal-version:       >=1.10

name:                color-word-analyzer
version:             0.1.0.0
synopsis:            Finds color words in text, and produces charts.
description:         A web app and CLI for finding color words in a text, and analyzing theem.
-- bug-reports:
license:             GPL-3
 
license-file:        LICENSE.md
author:              Jonathan Reeve
maintainer:          jon.reeve@gmail.com
copyright:           (c) 2020 Jonathan Reeve
category:            Text
stability:           experimental
homepage:            https://github.com/JonathanReeve/color-word-analyzer 
build-type:          Simple
-- extra-source-files:  CHANGELOG.md
-- data-dir:            data/

executable color-word-analyzer-cli
  main-is:           CLI.hs
  ghc-options:       -O2
                     -threaded
                     "-with-rtsopts=-N -s -K200M"
                     -main-is CLI
                     -- -prof
                     -- -fprof-auto
  other-modules:     AnnotateColors
                   , CategorizeColor
                   , ColorMaps
                   , FindColors
                   , PlotColors
                   , Types
                   , Main
                   , Data.Ridgway
                   , Data.Xkcd
                   , Data.Master
                   , Data.Jaffer
                   , Data.Pantone
  build-depends:       base
                     , Color
                     , Frames
                     , aeson
                     , attoparsec
                     , bytestring
                     , charsetdetect
                     , clay
                     , cli
                     , colour
                     , containers
                     , filepath
                     , http-types
                     , lucid
                     , hashable
                     , microlens
                     , plotlyhs
                     , regex-tdfa
                     , replace-attoparsec
                     , scotty
                     , statistics
                     , text
                     , unordered-containers
                     , vector
                     , wai-extra
                     , wai-middleware-static
  hs-source-dirs:      src/
  default-language:    Haskell2010
